maze.lessons.maze.island.IslandMaze.scala.error
Escaper:16: error: expected class or object definition
def talahaine() {
^Escaper:26: error: expected start of definition
override def run() {
         ^Escaper:34: error: Unmatched closing brace '}' ignored here
}
^